
#1. 确定CMake的最低版本需求
cmake_minimum_required(VERSION 3.10)

#2. 确定工程名
PROJECT(ParserXTP LANGUAGES CXX)
SET(CMAKE_CXX_STANDARD 17)

SET(SRC  
	${PROJECT_SOURCE_DIR}/ParserXTP.cpp
	${PROJECT_SOURCE_DIR}/ParserXTP.h
)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/build_${PLATFORM}/${CMAKE_BUILD_TYPE}/bin)

INCLUDE_DIRECTORIES(${INCS})
LINK_DIRECTORIES(${LNKS})
ADD_LIBRARY(ParserXTP SHARED ${SRC})

IF(MSVC)
	SET(LIBS
		ws2_32
		)
ELSE(GNUCC)
	IF(WIN32)
		SET(LIBS
			dl
			boost_thread
			${FS_LIB}
			ws2_32
			)
	ELSE(UNIX)
		SET(LIBS
			dl
			boost_thread
			${FS_LIB}
			)
	ENDIF()
ENDIF()
TARGET_LINK_LIBRARIES(ParserXTP ${LIBS})

IF (MSVC)
ELSE (GNUCC)
	SET_TARGET_PROPERTIES(ParserXTP PROPERTIES
		CXX_VISIBILITY_PRESET hidden
		C_VISIBILITY_PRESET hidden
		VISIBILITY_INLINES_HIDDEN 1
        LINK_FLAGS_RELEASE -s)
ENDIF ()

